--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oberlin Chess</title>
+    <title>Oberlin Chess Club</title>
 </head>
     
 <body>
-    Oberlin Chess Club
+    <h1>Oberlin Chess Club</h1>
+    <p>lorem</P>
 </body>
     
 </html>
