--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 <body>
     <h1>Oberlin Chess Club</h1>
-    <p>lorem</P>
+    <p>Join the Oberlin Chess Club <a href="https://discord.gg/MXr7naWnr9">Discord</a></P>
 </body>
     
 </html>
