--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
     
 <body>
     <h1>Oberlin Chess Club</h1>
-    <p>Join the Oberlin Chess Club <a href="https://discord.gg/MXr7naWnr9" target="_blank">Discord</a></P>
+    <hr>
+    <p>Date, Time, Location</p>
+    <P>Check out the Club <a href="https://www.instagram.com/oberlin_chess_club/" target="_blank">instagram</a></P>
+    <p>Check out the club <a href="https://www.facebook.com/OberlinCollegeChessClub/">facebook</a></p>
+    <p>Join the Club <a href="https://discord.gg/MXr7naWnr9" target="_blank">Discord</a></P>
+    <br>
+    <p>Join the email list</p>
+    <form action="the specific page that the form is submitted to" method="post">
+        <div>   
+            <label>full name</label>
+            <input type="text" name="variable-name"> 
+        </div> 
+        <div>   
+            <label>email</label> 
+            <input type="text" name="email">
+        </div>    
+    </form>
+
+
+
+
 </body>
     
 </html>
