--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oberlin Chess Club</title>
+    <meta name="description" content="Oberlin College Chess Club">
+    <meta name="keywords" content="team, teams, competative, tournament, Chess, playing, club, oberlin"
     <style type="text/css">
         #main-header{
             text-align: center;
             background-color: black;
             color: white;
             padding: 10px;
+        }
+        #main-footer{
+            text-align:center;
+
         }
     </style>
 </head>
