--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oberlin Chess Club</title>
     <meta name="description" content="Oberlin College Chess Club">
-    <meta name="keywords" content="team, teams, competative, tournament, Chess, playing, club, oberlin"
+    <meta name="keywords" content="team, teams, competative, tournament, Chess, playing, club, oberlin">
     <style type="text/css">
         #main-header{
             text-align: center;
