--- a/index.html
+++ b/index.html
@@ -7,18 +7,7 @@
     <title>Oberlin Chess Club</title>
     <meta name="description" content="Oberlin College Chess Club">
     <meta name="keywords" content="team, teams, competative, tournament, Chess, playing, club, oberlin">
-    <style type="text/css">
-        #main-header{
-            text-align: center;
-            background-color: black;
-            color: white;
-            padding: 10px;
-        }
-        #main-footer{
-            text-align:center;
-
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="CSS/Style.css">
 </head>
     
 <body>
