--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <hr>
     <section>
         <h3>Date, Time, Location</h3>
-        <p>The Club meets in Wilder 315 on...</p>    
+        <p>The Club meets in Wilder Hall, room 315 on Saturdays from 7-9pm and Sundays from 6-8pm during the oberlin <a href="https://www.oberlin.edu/registrar/academic-calendar">academic school year</a> </p>    
     </section>
     
     <P>Check out the Club <a href="https://www.instagram.com/oberlin_chess_club/" target="_blank">instagram</a></P>
