--- a/index.html
+++ b/index.html
@@ -25,25 +25,8 @@
     <p>Check out the club <a href="https://www.facebook.com/OberlinCollegeChessClub/">facebook</a></p>
     <p>Join the Club <a href="https://discord.gg/MXr7naWnr9" target="_blank">Discord</a></P>
     <br>
-    <p>Join the email list</p>
-    <form action="the specific page that the form is submitted to" method="post">
-        <div>   
-            <label>Full Name</label>
-            <input type="text" name="variable-name" 
-            placeholder="Enter Full Name">
-        </div> 
-        <div>
-            <label>Graduation Year</label>
-            <input type="number" name="graduation-year" value="2021">
-
-        </div>
-        <div>   
-            <label>Email</label> 
-            <input type="email" name="email"
-            placeholder="Enter Email">
-        </div>    
-        <br>
-        <input type="submit" name="submit" value="Submit">
+    <p>Join the email list using this <a href="">google form</a></p>
+    
     <aside>
         <h3>Categories</h3>
         <ul>
