--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 <body>
     <header id="main-header">
-        <h1>Oberlin Chess Club</h1>
+        <h1>Oberlin Chess Club <img src="images/ObelrinChessLogo.png" alt="Oberlin logo"></h1>
         
     </header>
     <hr>
@@ -22,7 +22,9 @@
         <p>The Club meets in Wilder Hall, room 315 on Saturdays from 7-9pm and Sundays from 6-8pm during the oberlin <a href="https://www.oberlin.edu/registrar/academic-calendar">academic school year</a> </p>    
     </section>
     <div class="box-1">
-    <P>Check out the Club <a href="https://www.instagram.com/oberlin_chess_club/" target="_blank">instagram</a></P>
+    <P>Check out the Club <a href="https://www.instagram.com/oberlin_chess_club/" target="_blank">instagram</a> to see highlights and fun positions
+        <img src="images/ChessPuzzle.png" alt="chess puzzle">
+    </P>
 </div>
     <div class="box-1">
     <p>Check out the club <a href="https://www.facebook.com/OberlinCollegeChessClub/">facebook</a></p>
