--- a/index.html
+++ b/index.html
@@ -23,23 +23,39 @@
         <p>The Club meets in <abbr title="135 W Lorain St, Oberlin, OH 44074">Wilder Hall</abbr>, room 315 on Saturdays from 7-9pm and Sundays from 6-8pm during the Oberlin <a href="https://www.oberlin.edu/registrar/academic-calendar">academic school year</a> </p>    
     </section>
     <div>
+<div class="container-center">
     <div class="box-1">
     <P>Check out the Club <a href="https://www.instagram.com/oberlin_chess_club/" target="_blank">instagram</a> to see highlights and fun positions
-        <a href="images/ChessPuzzle.png">
-            <img src="images/ChessPuzzle.png" alt="chess puzzle">
+        <a href="https://www.instagram.com/oberlin_chess_club/">
+            <img src="images/ChessPuzzle.png" alt="Chess Puzzle" width="80%">
         </a>
     </P>
 </div>
+<br>
     <div class="box-1">
-    <p>Check out the club <a href="https://www.facebook.com/OberlinCollegeChessClub/">facebook</a></p>
+    <p>Check out the club <a href="https://www.facebook.com/OberlinCollegeChessClub/" target="_blank">facebook</a> for updates and connections
+        <a href="https://www.facebook.com/OberlinCollegeChessClub/">
+            <img src="images/ChessTrophy.png" alt="Chess Trophy" width="80%">
+        </a>
+    </p>
 </div>
+<br>
     <div class="box-1">
-    <p>Join the Club <a href="https://discord.gg/MXr7naWnr9" target="_blank">Discord</a></P>
+    <p>Join the club <a href="https://discord.gg/MXr7naWnr9" target="_blank">Discord</a> for current club member activities and more
+        <a href="ttps://discord.gg/MXr7naWnr9">
+            <img src="images/Boards.jpg" alt="Chess Boards" width="80%">
+        </a>
+    </P>
 </div>
+<br>
     <div class="box-1">
-    <p>Join the email list using this <a href="https://www.google.com/forms/about/" target="_blank">google form</a></P>
+    <p>Join the email list using this <a href="https://www.google.com/forms/about/" target="_blank">google form</a> for infrequent announcements
+        <a href="https://www.google.com/forms/about/">
+            <img src="images/Flyer.jpg" alt="Flyer" width="80%">
+        </a>
+    </P>
 </div>
-
+</div>
 
     <aside>
         <h3>pages</h3>
