--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
     </P>
 </div>
 </div>
-
-    <aside>
+    <aside class="catagories">
         <h3>pages</h3>
         <ul>
             <li><a href="#"></a>Home page</li>
