--- a/index.html
+++ b/index.html
@@ -14,17 +14,27 @@
     <header id="main-header"> 
         <img src="images/ObelrinChessLogo.png" alt="Oberlin logo">
     </header>
-    <div class="navbar">
-        <ul>
-            <li><a href="#"></a>Home page</li>
-            <li><a href="#"></a>History</li>
-            <li><a href="#"></a>Practices</li>
-            <li><a href="#"></a>Tournaments</li>
-        </ul>
-    </div>
+    <nav class="navbar">
+        <div>
+            <ul>
+                <li><a href="#"></a>Home page</li>
+                <li><a href="#"></a>History</li>
+                <li><a href="#"></a>Practices</li>
+                <li><a href="#"></a>Events</li>
+                <li><a href="#"></a>Contact</li>
+                <li><a href="#"></a>ChessExco</li>
+            </ul>
+        </div>
+    </nav>
+    <section id="showcase">
+        <h1>"When you see a good move, 
+            look for a better one" 
+            -Lasker</h1>
+
+    </section>
     <div class="container">
     <section>
-        <h3>Date, Time, Location</h3>
+        <h3>Misson Statement</h3>
         <p>The Club meets in <abbr title="135 W Lorain St, Oberlin, OH 44074">Wilder Hall</abbr>, room 315 on Saturdays from 7-9pm and Sundays from 6-8pm during the Oberlin <a href="https://www.oberlin.edu/registrar/academic-calendar">academic school year</a> </p>    
     </section>
     <div>
@@ -61,12 +71,17 @@
     </P>
 </div>
 </div>
+<aside id="sidebar">
+    <p>lichess chess</p>
+</aside>
+
+<div>
     <hr>
     <footer id="main-footer">
         <p>Copyright &copy; 2021, Obelrin Chess Club </p>
     </footer>
     </form>
-
+</div>
 
     
 
