--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="images/ObelrinChessLogo.png" alt="Oberlin logo">
     </header>
     <nav class="navbar">
-        <div>
+        <div class="navcontainer">
             <ul>
                 <li><a href="#"></a>Home page</li>
                 <li><a href="#"></a>History</li>
@@ -38,7 +38,7 @@
         <p>The Club meets in <abbr title="135 W Lorain St, Oberlin, OH 44074">Wilder Hall</abbr>, room 315 on Saturdays from 7-9pm and Sundays from 6-8pm during the Oberlin <a href="https://www.oberlin.edu/registrar/academic-calendar">academic school year</a> </p>    
     </section>
     <div>
-<div class="container-center">
+<div class="container-colum">
     <div class="box-1">
     <P>Check out the Club <a href="https://www.instagram.com/oberlin_chess_club/" target="_blank">Instagram</a> to see highlights and fun positions
         <a href="https://www.instagram.com/oberlin_chess_club/">
@@ -47,7 +47,7 @@
     </P>
 </div>
 <br>
-    <div class="box-1">
+    <div class="box-2">
     <p>Check out the club <a href="https://www.facebook.com/OberlinCollegeChessClub/" target="_blank">Facebook</a> for updates and connections
         <a href="https://www.facebook.com/OberlinCollegeChessClub/">
             <img src="images/ChessTrophy.png" alt="Chess Trophy" width="80%">
@@ -55,7 +55,7 @@
     </p>
 </div>
 <br>
-    <div class="box-1">
+    <div class="box-3">
     <p>Join the club <a href="https://discord.gg/MXr7naWnr9" target="_blank">Discord</a> for current club member activities and more
         <a href="ttps://discord.gg/MXr7naWnr9">
             <img src="images/Boards.jpg" alt="Chess Boards" width="80%">
@@ -63,7 +63,7 @@
     </P>
 </div>
 <br>
-    <div class="box-1">
+    <div class="box-4">
     <p>Join the email list using this <a href="https://www.google.com/forms/about/" target="_blank">google form</a> for infrequent announcements
         <a href="https://www.google.com/forms/about/">
             <img src="images/Flyer.jpg" alt="Flyer" width="80%">
