--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </div>
     </nav>
     <section id="showcase">
-        <h1>"When you see a good move, 
-            look for a better one" 
-            -Lasker</h1>
+        <h1>"When you see a good move,</h1> 
+        <h1> for a better one" </h1>
+        <h1><em>-Lasker</em></h1>
 
     </section>
     <div class="container">
