--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
     <nav class="navbar">
         <div class="navcontainer">
             <ul>
-                <li><a href="#"></a>Home page</li>
-                <li><a href="#"></a>History</li>
-                <li><a href="#"></a>Practices</li>
-                <li><a href="#"></a>Events</li>
-                <li><a href="#"></a>Contact</li>
-                <li><a href="#"></a>ChessExco</li>
+                <li><a href="#">Home page</a></li>
+                <li><a href="#">History</a></li>
+                <li><a href="#">Practices</a></li>
+                <li><a href="#">Events</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">ChessExco</a></li>
             </ul>
         </div>
     </nav>
     <section id="showcase">
         <h1>"When you see a good move,</h1> 
-        <h1> for a better one" </h1>
-        <h1><em>-Lasker</em></h1>
+        <h2>look for a better one"</h2>
+        <h3><em>-Lasker</em></h2>
 
     </section>
     <div class="container">
