--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     </section>
     <div class="container">
     <section>
-        <h3>Misson Statement</h3>
-        <p>The Club meets in <abbr title="135 W Lorain St, Oberlin, OH 44074">Wilder Hall</abbr>, room 315 on Saturdays from 7-9pm and Sundays from 6-8pm during the Oberlin <a href="https://www.oberlin.edu/registrar/academic-calendar">academic school year</a> </p>    
+        <h3>Campus News</h3>
+        <p>At Oberlin, there are no paid chess coaches or chess scholarships like at some schools where, according to chess club advisor and women’s tennis coach Constantine Ananiadis, “The clubs seem to run like a Division I athletics department.” Instead, chess club members at Oberlin play only for the love of the game, and their skill levels vary greatly. Despite being a program that lacks the benefit of heavy recruitment and scholarships like some powerhouse chess schools, Oberlin’s club has seen significant achievements in recent years...</p>    
+        <a href="https://www.oberlin.edu/news/chess-club-brings-home-fourth-trophy" class="btn btn-outline">Read More</a>
     </section>
     <div>
 <div class="container-colum">
