--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     </section>
     <div class="container">
-    <section>
+    <section class="topText">
         <h3>Campus News</h3>
         <p>At Oberlin, there are no paid chess coaches or chess scholarships like at some schools where, according to chess club advisor and women’s tennis coach Constantine Ananiadis, “The clubs seem to run like a Division I athletics department.” Instead, chess club members at Oberlin play only for the love of the game, and their skill levels vary greatly. Despite being a program that lacks the benefit of heavy recruitment and scholarships like some powerhouse chess schools, Oberlin’s club has seen significant achievements in recent years...</p>    
         <a href="https://www.oberlin.edu/news/chess-club-brings-home-fourth-trophy" class="btn btn-outline">Read More</a>
