--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         </div>
     </nav>
     <section id="showcase">
+        <div id="showcasetext">
         <h1>"When you see a good move,</h1> 
         <h2>look for a better one"</h2>
         <h3><em>-Lasker</em></h2>
-
+        </div>
     </section>
     <div class="container">
     <section class="topText">
