--- a/index.html
+++ b/index.html
@@ -35,9 +35,14 @@
     </section>
     <div class="container">
     <section class="topText">
-        <h3>Campus News</h3>
+        <h3><u>Campus News</u></h3>
         <p>At Oberlin, there are no paid chess coaches or chess scholarships like at some schools where, according to chess club advisor and women’s tennis coach Constantine Ananiadis, “The clubs seem to run like a Division I athletics department.” Instead, chess club members at Oberlin play only for the love of the game, and their skill levels vary greatly. Despite being a program that lacks the benefit of heavy recruitment and scholarships like some powerhouse chess schools, Oberlin’s club has seen significant achievements in recent years...</p>    
         <a href="https://www.oberlin.edu/news/chess-club-brings-home-fourth-trophy" class="btn btn-outline">Read More</a>
+    </section>
+    <section class="topText">
+        <h3><u>Campus News</u></h3>
+        <p>As anyone in the Oberlin College Chess Club (OCCC) can attest, the game of chess is not for the weak of mind...</p>    
+        <a href="https://www.oberlin.edu/news/oberlin-chess-club-makes-its-move" class="btn btn-outline">Read More</a>
     </section>
     <div>
 <div class="container-colum">
