--- a/index.html
+++ b/index.html
@@ -28,67 +28,84 @@
     </nav>
     <section id="showcase">
         <div id="showcasetext">
-        <h1>"When you see a good move,</h1> 
-        <h2>look for a better one"</h2>
-        <h3><em>-Lasker</em></h2>
+            <h1>"When you see a good move,</h1> 
+            <h2>look for a better one"</h2>
+            <h3><em>-Lasker</em></h2>
         </div>
     </section>
-    <div class="container">
-    <section class="topText">
-        <h3><u>Campus News</u></h3>
-        <p>At Oberlin, there are no paid chess coaches or chess scholarships like at some schools where, according to chess club advisor and women’s tennis coach Constantine Ananiadis, “The clubs seem to run like a Division I athletics department.” Instead, chess club members at Oberlin play only for the love of the game, and their skill levels vary greatly. Despite being a program that lacks the benefit of heavy recruitment and scholarships like some powerhouse chess schools, Oberlin’s club has seen significant achievements in recent years...</p>    
-        <a href="https://www.oberlin.edu/news/chess-club-brings-home-fourth-trophy" class="btn btn-outline">Read More</a>
-    </section>
-    <section class="topText">
-        <h3><u>Campus News</u></h3>
-        <p>As anyone in the Oberlin College Chess Club (OCCC) can attest, the game of chess is not for the weak of mind...</p>    
-        <a href="https://www.oberlin.edu/news/oberlin-chess-club-makes-its-move" class="btn btn-outline">Read More</a>
-    </section>
-    <div>
-<div class="container-colum">
-    <div class="box-1">
-    <P>Check out the Club <a href="https://www.instagram.com/oberlin_chess_club/" target="_blank">Instagram</a> to see highlights and fun positions
-        <a href="https://www.instagram.com/oberlin_chess_club/">
-            <img src="images/ChessPuzzle.png" alt="Chess Puzzle" width="80%">
-        </a>
-    </P>
-</div>
-<br>
-    <div class="box-2">
-    <p>Check out the club <a href="https://www.facebook.com/OberlinCollegeChessClub/" target="_blank">Facebook</a> for updates and connections
-        <a href="https://www.facebook.com/OberlinCollegeChessClub/">
-            <img src="images/ChessTrophy.png" alt="Chess Trophy" width="80%">
-        </a>
-    </p>
-</div>
-<br>
-    <div class="box-3">
-    <p>Join the club <a href="https://discord.gg/MXr7naWnr9" target="_blank">Discord</a> for current club member activities and more
-        <a href="ttps://discord.gg/MXr7naWnr9">
-            <img src="images/Boards.jpg" alt="Chess Boards" width="80%">
-        </a>
-    </P>
-</div>
-<br>
-    <div class="box-4">
-    <p>Join the email list using this <a href="https://www.google.com/forms/about/" target="_blank">google form</a> for infrequent announcements
-        <a href="https://www.google.com/forms/about/">
-            <img src="images/Flyer.jpg" alt="Flyer" width="80%">
-        </a>
-    </P>
-</div>
-</div>
-<aside id="sidebar">
-    <p>lichess chess</p>
-</aside>
+    <div class="wrapper">
+        <div class="container">
+            <section class="topText">
+                <h3><u>Campus News</u></h3>
+                <p>At Oberlin, there are no paid chess coaches or chess scholarships like at some schools where, according to chess club advisor and women’s tennis coach Constantine Ananiadis, “The clubs seem to run like a Division I athletics department.” Instead, chess club members at Oberlin play only for the love of the game, and their skill levels vary greatly. Despite being a program that lacks the benefit of heavy recruitment and scholarships like some powerhouse chess schools, Oberlin’s club has seen significant achievements in recent years...</p>    
+                <a href="https://www.oberlin.edu/news/chess-club-brings-home-fourth-trophy" class="btn btn-outline">Read More</a>
+            </section>
+            <section class="topText">
+                <h3><u>Campus News</u></h3>
+                <p>As anyone in the Oberlin College Chess Club (OCCC) can attest, the game of chess is not for the weak of mind...</p>    
+                <a href="https://www.oberlin.edu/news/oberlin-chess-club-makes-its-move" class="btn btn-outline">Read More</a>
+            </section>
+        </div>
+            <div class="box-1">
+                <P>Check out the Club <a href="https://www.instagram.com/oberlin_chess_club/" target="_blank">Instagram</a> to see highlights and fun positions
+                    <a href="https://www.instagram.com/oberlin_chess_club/">
+                        <img src="images/ChessPuzzle.png" alt="Chess Puzzle" width="80%">
+                    </a>
+                </P>
+            </div>
+            <div class="midtopText">
+                <p></p>
+            </div>
+            <div class="box-2">
+                <p>Check out the club <a href="https://www.facebook.com/OberlinCollegeChessClub/" target="_blank">Facebook</a> for updates and connections
+                    <a href="https://www.facebook.com/OberlinCollegeChessClub/">
+                        <img src="images/ChessTrophy.png" alt="Chess Trophy" width="80%">
+                    </a>
+                </p>
+            </div>
+            <div class="midText">
+                <p></p>
+            </div>
+            <div class="box-3">
+                <p>Join the club <a href="https://discord.gg/MXr7naWnr9" target="_blank">Discord</a> for current club member activities and more
+                    <a href="ttps://discord.gg/MXr7naWnr9">
+                        <img src="images/Boards.jpg" alt="Chess Boards" width="80%">
+                    </a>
+                </P>
+            </div>
+            <div class="midbottomText">
+                <p></p>
+            </div>
+            <div class="box-4">
+                <p>Join the email list using this <a href="https://www.google.com/forms/about/" target="_blank">google form</a> for infrequent announcements
+                    <a href="https://www.google.com/forms/about/">
+                        <img src="images/Flyer.jpg" alt="Flyer" width="80%">
+                    </a>
+                </P>
+            </div>
+    </div>
+    <aside id="sidebar">
+        <p>lichess chess</p>
+    </aside>
 
-<div>
-    <hr>
-    <footer id="main-footer">
-        <p>Copyright &copy; 2021, Obelrin Chess Club </p>
-    </footer>
-    </form>
-</div>
+    <div>
+        <footer id="main-footer">
+            <nav class="bottomnavbar">
+                <div class="bottomnavcontainer">
+                    <ul>
+                        <li><a href="#">Home page</a></li>
+                        <li><a href="#">History</a></li>
+                        <li><a href="#">Practices</a></li>
+                        <li><a href="#">Events</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">ChessExco</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <p>Copyright &copy; 2021, Obelrin Chess Club </p>
+        </footer>
+        </form>
+    </div>
 
     
 
