--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <nav class="navbar">
         <div class="navcontainer">
             <ul>
-                <li><a href="#">Home page</a></li>
-                <li><a href="#">History</a></li>
+                <li><a href="index.html">Home page</a></li>
+                <li><a href="history.html">History</a></li>
                 <li><a href="#">Practices</a></li>
                 <li><a href="#">Events</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">ChessExco</a></li>
             </ul>
         </div>
@@ -36,9 +36,18 @@
     <div class="wrapper">
         <div class="container">
             <section class="topText">
-                <h3><u>Campus News</u></h3>
-                <p>At Oberlin, there are no paid chess coaches or chess scholarships like at some schools where, according to chess club advisor and women’s tennis coach Constantine Ananiadis, “The clubs seem to run like a Division I athletics department.” Instead, chess club members at Oberlin play only for the love of the game, and their skill levels vary greatly. Despite being a program that lacks the benefit of heavy recruitment and scholarships like some powerhouse chess schools, Oberlin’s club has seen significant achievements in recent years...</p>    
-                <a href="https://www.oberlin.edu/news/chess-club-brings-home-fourth-trophy" class="btn btn-outline">Read More</a>
+                <div class="nested">
+                    <div>
+                        <h3><u>Campus News</u></h3>
+                        <p>"At Oberlin, there are no paid chess coaches or chess scholarships like at some schools where, according to chess club advisor and women’s tennis coach Constantine Ananiadis, “The clubs seem to run like a Division I athletics department.” Instead, chess club members at Oberlin play only for the love of the game, and their skill levels vary greatly. Despite being a program that lacks the benefit of heavy recruitment and scholarships like some powerhouse chess schools, Oberlin’s club has seen significant achievements in recent years..."</p>    
+                        <a href="https://www.oberlin.edu/news/chess-club-brings-home-fourth-trophy" class="btn btn-outline">Read More</a>
+                    </div>
+                    <div>
+                        <h3><u>Campus News</u></h3>
+                        <p>"As anyone in the Oberlin College Chess Club (OCCC) can attest, the game of chess is not for the weak of mind..."</p>    
+                        <a href="https://www.oberlin.edu/news/oberlin-chess-club-makes-its-move" class="btn btn-outline">Read More</a>
+                    </div>
+                </div>
             </section>
         </div>
             <div class="box-1">
@@ -49,10 +58,12 @@
                 </P>
             </div>
             <div class="midtopText">
-                <section class="topText container">
-                    <h3><u>Campus News</u></h3>
-                    <p>As anyone in the Oberlin College Chess Club (OCCC) can attest, the game of chess is not for the weak of mind...</p>    
-                    <a href="https://www.oberlin.edu/news/oberlin-chess-club-makes-its-move" class="btn btn-outline">Read More</a>
+                <section class="topText container nested">
+                    <div>
+                        <h3><u>The Oberlin Review</u></h3>
+                        <p>"After Netflix released its miniseries The Queen’s Gambit this fall, a buzz began to grow around chess, exciting people who had never before been interested in the game..."</p>
+                        <a href="https://oberlinreview.org/22465/sports/the-queens-gambit-and-the-modern-era-of-chess/" class="btn btn-outline">Read More</a>
+                    </div>
                 </section>
             </div>
             <div class="box-2">
