--- a/contact.html
+++ b/contact.html
@@ -19,10 +19,10 @@
             <ul>
                 <li><a href="index.html">Home page</a></li>
                 <li><a href="history.html">History</a></li>
-                <li><a href="#">Practices</a></li>
-                <li><a href="#">Events</a></li>
+                <li><a href="practices.html">Practices</a></li>
+                <li><a href="events.html">Events</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="#">ChessExco</a></li>
+                <li><a href="chessexco.html">ChessExco</a></li>
             </ul>
         </div>
     </nav>
@@ -40,12 +40,12 @@
             <nav class="bottomnavbar">
                 <div class="bottomnavcontainer">
                     <ul>
-                        <li><a href="#">Home page</a></li>
-                        <li><a href="#">History</a></li>
-                        <li><a href="#">Practices</a></li>
-                        <li><a href="#">Events</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">ChessExco</a></li>
+                        <li><a href="index.html">Home page</a></li>
+                        <li><a href="history.html">History</a></li>
+                        <li><a href="practices.html">Practices</a></li>
+                        <li><a href="events.html">Events</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="chessexco.html">ChessExco</a></li>
                     </ul>
                 </div>
             </nav>
