--- a/events.html
+++ b/events.html
@@ -26,11 +26,9 @@
             </ul>
         </div>
     </nav>
-    <section id="showcase">
+    <section id="showcase-events">
         <div id="showcasetext">
-            <h1>"When you see a good move,</h1> 
-            <h2>look for a better one"</h2>
-            <h3><em>-Lasker</em></h2>
+            <h1>Tournaments and more</h1> 
         </div>
     </section>
     
