--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="box-3">
                 <p>Join the club <a href="https://discord.gg/MXr7naWnr9" target="_blank">Discord</a> for current club member activities and more
                     <a href="ttps://discord.gg/MXr7naWnr9">
-                        <img src="images/Boards.jpg" alt="Chess Boards" width="80%">
+                        <img src="images/stackedboards.jpg" alt="Chess Boards" width="80%">
                     </a>
                 </P>
             </div>
