--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,50 @@
             <h1></h1> 
         </div>
     </section>
+
+    <div class="box-1">
+        <P>Check out the Club <a href="https://www.instagram.com/oberlin_chess_club/" target="_blank">Instagram</a> to see highlights and fun positions
+            <a href="https://www.instagram.com/oberlin_chess_club/">
+                <img src="images/ChessPuzzle.png" alt="Chess Puzzle" width="80%">
+            </a>
+        </P>
+    </div>
+    <div class="midtopText">
+        <section class="topText container nested">
+            <div>
+                <h3><u>The Oberlin Review</u></h3>
+                <p>"After Netflix released its miniseries The Queen’s Gambit this fall, a buzz began to grow around chess, exciting people who had never before been interested in the game..."</p>
+                <a href="https://oberlinreview.org/22465/sports/the-queens-gambit-and-the-modern-era-of-chess/" class="btn btn-outline">Read More</a>
+            </div>
+        </section>
+    </div>
+    <div class="box-2">
+        <p>Check out the club <a href="https://www.facebook.com/OberlinCollegeChessClub/" target="_blank">Facebook</a> for updates and connections
+            <a href="https://www.facebook.com/OberlinCollegeChessClub/">
+                <img src="images/ChessTrophy.png" alt="Chess Trophy" width="80%">
+            </a>
+        </p>
+    </div>
+    <div class="midText">
+        <p></p>
+    </div>
+    <div class="box-3">
+        <p>Join the club <a href="https://discord.gg/MXr7naWnr9" target="_blank">Discord</a> for current club member activities and more
+            <a href="ttps://discord.gg/MXr7naWnr9">
+                <img src="images/stackedboards.jpg" alt="Chess Boards" width="80%">
+            </a>
+        </P>
+    </div>
+    <div class="midbottomText">
+        <p></p>
+    </div>
+    <div class="box-4">
+        <p>Join the email list using this <a href="https://www.google.com/forms/about/" target="_blank">google form</a> for infrequent announcements
+            <a href="https://www.google.com/forms/about/">
+                <img src="images/Flyer.jpg" alt="Flyer" width="80%">
+            </a>
+        </P>
+    </div>
     
 
     <div>
